--- a/Demo/wxProject/miniprogram/pages/list/list.wxss
+++ b/Demo/wxProject/miniprogram/pages/list/list.wxss
@@ -1,4 +1,4 @@
-/* pages/list/list.wxss */
+
 .banner swiper{
   height: 400rpx;
 }
@@ -9,9 +9,63 @@
 }
 .classify .class_box{
   width: 120rpx;
-  height: 120rpx;
-  background-color: red;
+  height: 100rpx;
+  border: 1px solid #ddd;
+  border-radius: 8rpx;
   margin-left: 20rpx;
   float: left;
   margin-top: 20rpx;
+  font-size: 28rpx;
+  text-align: center;
+}
+
+.class_box image{
+  width: 60rpx;
+  height: 60rpx;
+  display: block;
+  margin: auto;
+}
+.classify_body{
+  padding: 40rpx 0rpx;
+}
+/* 指示点样式 */
+.classify_body .wx-swiper-dots .wx-swiper-dots-horizontal{
+     margin-bottom: 2rpx;
+}
+.classify_body .wx-swiper-dot{
+    width:35rpx;
+    display: inline-flex;
+    height: 8rpx;
+    margin-left: 15rpx;
+    justify-content:space-between;
+}
+.classify_body .wx-swiper-dot::before{
+    content: '';
+    flex-grow: 1; 
+    background: #dbdbdb;
+    border-radius: 10rpx
+}
+.classify_body .wx-swiper-dot-active::before{
+    background:#1296DB;   
+}
+/* 侧边栏*/
+.leftBar{
+  background-color: #000;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 600rpx;
+  height: 100%;
+  z-index: 99;
+  margin-left:-600rpx;
+}
+/*遮罩*/
+.fix{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index:98;
+  background-color: rgba(0, 0, 0, 0.7);
 }
