--- a/Demo/wxProject/miniprogram/app.wxss
+++ b/Demo/wxProject/miniprogram/app.wxss
@@ -1,7 +1,23 @@
 /**app.wxss**/
+page{
+  background: #f3f3f3;
+  width: 100%;
+  height: 100%;
+  font-family: "pingfang";
+}
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
 } 
+.public_shadow{
+	-webkit-box-shadow: 0px 8px 14px rgba(0,0,0,.3);
+  -moz-box-shadow: 0px 8px 14px rgba(0,0,0,.3);
+  box-shadow: 0px 8px 14px rgba(114, 51, 51, 0.3);
+}
+.public_shadow_qin{
+	-webkit-box-shadow: 2px 8px 14px rgba(179,229,252,.8);
+  -moz-box-shadow:2px 8px 14pxrgba(179,229,252,.8);
+  box-shadow: 2px 8px 14px rgba(179,229,252,.8);
+}
