--- a/Demo/wxProject/miniprogram/pages/list/list.wxss
+++ b/Demo/wxProject/miniprogram/pages/list/list.wxss
@@ -1,4 +1,8 @@
-
+.banner{
+  width: 100%;
+  height: 400rpx;
+  overflow: hidden;
+}
 .banner swiper{
   height: 400rpx;
 }
@@ -6,11 +10,11 @@
   width: 100%;
   height: auto;
   padding-left: 10rpx;
+  background-color: #ffffff;
 }
 .classify .class_box{
   width: 120rpx;
   height: 100rpx;
-  border: 1px solid #ddd;
   border-radius: 8rpx;
   margin-left: 20rpx;
   float: left;
@@ -58,6 +62,7 @@
   height: 100%;
   z-index: 99;
   margin-left:-600rpx;
+  transition: all 0.5s;
 }
 /*遮罩*/
 .fix{
