--- a/Demo/wxProject/miniprogram/pages/list/list.wxml
+++ b/Demo/wxProject/miniprogram/pages/list/list.wxml
@@ -1,7 +1,7 @@
 <!--pages/list/list.wxml-->
 <view>
   <view class="banner public_shadow">
-    <swiper indicator-dots="true" autoplay="true" interval="5000" indicator-active-color="#2089DC" circular="true" bindchange="EventHandle">
+    <swiper indicator-dots="true" autoplay="true" interval="3000" indicator-active-color="#2089DC" circular="true" bindchange="EventHandle">
       <block wx:for="{{bannerUrl}}">
         <swiper-item>
           <image src="{{item}}" style="width:100%;"></image>
@@ -25,10 +25,15 @@
   <view style='width:100%;height:330rpx;background-color:#fff;'>
 
   </view>
-  <view wx:if='{{showLeftBar}}' style='opacity:{{moveX/100}};' class='fix'></view>
+  <view wx:if='{{showMotai}}' style='opacity:{{moveX/100}};' class='fix'></view>
   <!-- 左侧栏 -->
   <view wx:if='{{showLeftBar}}' style='margin-left:{{moveX-300}}px;' catchtap='closeLeft' class='leftBar' >
     
+  </view>
+  <!-- 作者介绍 -->
+  <view class='motail' wx:if='{{isShowAphorism}}'>
+    <image src='{{imgUrl_change}}aphorism.png'></image>
+    <view class='close_this' catchtap='colse_aphorism'>x</view>
   </view>
   <!-- <van-button type="primary">vant按钮</van-button> -->
 </view>
