--- a/Demo/wxProject/miniprogram/pages/list/list.wxss
+++ b/Demo/wxProject/miniprogram/pages/list/list.wxss
@@ -74,3 +74,37 @@
   z-index:98;
   background-color: rgba(0, 0, 0, 0.7);
 }
+/* 作者介绍 */
+.motail{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 80%;
+  margin-left: 10%;
+  margin-top: 60rpx;
+  height: 800rpx;
+  border-radius: 20rpx;
+  background-color: red;
+  z-index: 99;
+}
+.motail .close_this{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width:100rpx;
+  height: 100rpx;
+  border-radius: 50%;
+  margin: auto;
+  margin-bottom: -80rpx;
+  margin-left: 230rpx;
+  border:2rpx solid#ddd;
+  color: #ddd;
+  text-align: center;
+  line-height: 100rpx;
+  font-size:40rpx;
+}
+.motail image{
+  width: 100%;
+  height: 100%;
+  border-radius: 20rpx;
+}
