--- a/Demo/wxProject/miniprogram/pages/index/index.wxml
+++ b/Demo/wxProject/miniprogram/pages/index/index.wxml
@@ -2,7 +2,7 @@
 <view class="container">
   <view class='title'>信息列表</view>
   <scroll-view>
-  <view class='cardList public_shadow_qin' wx:for='{{cardList}}'>
+  <view class='cardList public_shadow_qin'  wx:for='{{cardList}}' wx:key='{{index}}'>
     {{item.title}}
   </view>
   </scroll-view>
