--- a/Demo/wxProject/miniprogram/pages/list/list.wxml
+++ b/Demo/wxProject/miniprogram/pages/list/list.wxml
@@ -13,22 +13,24 @@
   <view class='classify'>
     <swiper indicator-dots="true" class='classify_body' autoplay="" interval="" circular="1000">
       <swiper-item>
-        <view class='class_box public_shadow' wx:for='{{classList}}'wx:key="index">
+        <view class='class_box public_shadow' wx:for='{{classList}}' wx:key="index">
           <image src='{{item.url}}'></image>{{item.name}}</view>
       </swiper-item>
       <swiper-item>
-          <view class='class_box public_shadow' wx:for='{{classList}}' wx:key="index">
+        <view class='class_box public_shadow' wx:for='{{classList}}' wx:key="index">
           <image src='{{item.url}}'></image>{{item.name}}</view>
       </swiper-item>
     </swiper>
   </view>
   <view style='width:100%;height:330rpx;background-color:#fff;'>
-
+      <button catchtap='addUser'>添加信息</button>
+      <button catchtap='getUser'>查看信息</button>
   </view>
+  <!-- 遮罩 -->
   <view wx:if='{{showMotai}}' style='opacity:{{moveX/100}};' class='fix'></view>
   <!-- 左侧栏 -->
-  <view wx:if='{{showLeftBar}}' style='margin-left:{{moveX-300}}px;' catchtap='closeLeft' class='leftBar' >
-    
+  <view wx:if='{{showLeftBar}}' style='margin-left:{{moveX-300}}px;' catchtap='closeLeft' class='leftBar'>
+
   </view>
   <!-- 作者介绍 -->
   <view class='motail' wx:if='{{isShowAphorism}}' style='{{motail_top}}'>
