--- a/Demo/wxProject/miniprogram/pages/list/list.wxml
+++ b/Demo/wxProject/miniprogram/pages/list/list.wxml
@@ -25,6 +25,7 @@
   <view style='width:100%;height:330rpx;background-color:#fff;'>
       <button catchtap='addUser'>添加信息</button>
       <button catchtap='getUser'>查看信息</button>
+      <button catchtap='setUser'>修改数据</button>
   </view>
   <!-- 遮罩 -->
   <view wx:if='{{showMotai}}' style='opacity:{{moveX/100}};' class='fix'></view>
@@ -34,7 +35,7 @@
   </view>
   <!-- 作者介绍 -->
   <view class='motail' wx:if='{{isShowAphorism}}' style='{{motail_top}}'>
-    <image src='{{imgUrl_change}}aphorism.png'></image>
+    <image src='{{imgUrl_change}}principle.png'></image>
     <view class='close_this' catchtap='colse_aphorism'>x</view>
   </view>
   <!-- <van-button type="primary">vant按钮</van-button> -->
