--- a/Demo/wxProject/miniprogram/pages/my/my.wxss
+++ b/Demo/wxProject/miniprogram/pages/my/my.wxss
@@ -32,10 +32,39 @@
 .header_top button:after {
   border: none;
 }
-.user_center .userId{
-  width: 750rpx;
-  height: 100rpx;
-  font-size: 28rpx;
-  border-top: 2rpx solid #000;
+/* 用户中心 */
+.user_center{
+  width: 100%;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
 }
-/*  */
+.user-info{
+  width: 120rpx;
+  height: 120rpx;
+  background-color: red;
+  margin: 30rpx;
+}
+/* 常用 */
+.user-often{
+  width: 100%;
+  background-color: #fff;
+  margin-top: 20rpx;
+}
+.often-title{
+  font-size: 34rpx;
+  font-weight: bold;
+  padding-left: 30rpx;
+}
+.often-content{
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.often-list{
+  width: 120rpx;
+  height: 120rpx;
+  background-color: red;
+  margin: 30rpx;
+}
