--- a/miniprogram/pages/list/list.wxml
+++ b/miniprogram/pages/list/list.wxml
@@ -10,11 +10,13 @@
     </swiper>
   </view>
   <!-- 分类栏 -->
-  <view class='classify'>
-    <swiper indicator-dots="true" class='classify_body' autoplay="" interval="" circular="1000">
+  <view class='classify public_shadow'>
+    <swiper indicator-dots="true" class='classify_body' autoplay="" interval="" circular="2000">
       <swiper-item>
         <view class='class_box public_shadow' wx:for='{{classList}}' wx:key="index">
-          <image src='{{item.url}}'></image>{{item.name}}</view>
+          <image src='{{item.url}}'></image>
+          <text class='box-name'>{{item.name}}</text>
+        </view>
       </swiper-item>
       <swiper-item>
         <view class='class_box public_shadow' wx:for='{{classList}}' wx:key="index">
@@ -23,10 +25,10 @@
     </swiper>
   </view>
   <view class='information'>
-     <view class='info-list' wx:for="{{[5,5,5]}}">
+     <view class='info-list public_shadow' wx:for="{{[5,5,5]}}" wx:key="index">
       <view class='info-img'><image src='{{bannerUrl[1]}}'></image> </view>
       <view class='info-right'>
-        <view class='info-title'>《快速导航信息列表》</view>
+        <view class='info-title p_color_org'>《快速导航信息列表》</view>
         <view class='info-body'>欢迎来到我的博客中心，runner博客会一直分享科技新闻。欢迎更多的小伙伴加入我。和我一起探讨</view>
       </view>
      </view>
@@ -39,7 +41,7 @@
   </view>
   <!-- 作者介绍 -->
   <view class='motail' wx:if='{{isShowAphorism}}' style='{{motail_top}}'>
-    <image src='{{imgUrl_change}}principle.png'></image>
+    <!-- <image src='{{imgUrl_change}}principle.png'></image> -->
     <view class='close_this' catchtap='colse_aphorism'>x</view>
   </view>
   <!-- <van-button type="primary">vant按钮</van-button> -->
