--- a/miniprogram/pages/my/my.wxss
+++ b/miniprogram/pages/my/my.wxss
@@ -43,8 +43,11 @@
 .user-info{
   width: 120rpx;
   height: 120rpx;
-  background-color: red;
+  line-height: 120rpx;
+  text-align: center;
   margin: 30rpx;
+  color: #fff;
+  border-radius: 12rpx;
 }
 /* 常用 */
 .user-often{
@@ -53,7 +56,7 @@
   margin-top: 20rpx;
 }
 .often-title{
-  font-size: 34rpx;
+  font-size: 24rpx;
   font-weight: bold;
   padding-left: 30rpx;
 }
@@ -65,6 +68,9 @@
 .often-list{
   width: 120rpx;
   height: 120rpx;
-  background-color: red;
+  line-height: 120rpx;
+  text-align: center;
   margin: 30rpx;
+  color: #fff;
+  border-radius: 12rpx;
 }
