--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -5,6 +5,7 @@ page{
   height: 100%;
   font-family: "pingfang";
   color: #212121;
+  overflow-x: hidden;
 }
 .container {
   display: flex;
@@ -13,12 +14,40 @@ page{
   box-sizing: border-box;
 } 
 .public_shadow{
-	-webkit-box-shadow: 0px 8px 14px rgba(0,0,0,.3);
-  -moz-box-shadow: 0px 8px 14px rgba(0,0,0,.3);
-  box-shadow: 0px 8px 14px rgba(114, 51, 51, 0.3);
+	-webkit-box-shadow: 0 0 8rpx 0 rgba(0,0,0,.1);
+  -moz-box-shadow: 0 0 8rpx 0 rgba(0,0,0,.1);
+  box-shadow: 0 0 8rpx 0 rgba(0,0,0,.1);
 }
 .public_shadow_qin{
 	-webkit-box-shadow: 2px 8px 14px rgba(179,229,252,.8);
   -moz-box-shadow:2px 8px 14pxrgba(179,229,252,.8);
   box-shadow: 2px 8px 14px rgba(179,229,252,.8);
+}
+.p_color_org{
+  color: #fe5e23 !important;
+}
+.p_bg_org{
+  background-color: #fe5e23 !important;
+}
+/* form */
+.ui-form-item{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 84rpx;
+  background-color: #e2e2e2;
+  font-size: 28rpx;
+}
+.ui-form-item .ui-label{
+  padding-left: 20rpx;
+  width: 30%;
+}
+.ui-form-item .ui-input{
+  /* float: left; */
+    width: 70%;
+}
+.ui-button{
+  margin-top: 12rpx;
+  width: 100%;
 }
