--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -3,26 +3,31 @@
 }
 .title{
   width: 100%;
-  height:50rpx;
-  line-height: 50rpx;  
-  padding: 8rpx 8rpx;
+  height:80rpx;
+  line-height: 80rpx;  
+  /* padding: 8rpx 8rpx; */
   padding-left: 20rpx;
   color: #333;
   font-size: 28rpx;
-  background-color: #BDBDBD;
+  background-color: #B3e5fc;
   position:fixed;
   left: 0;
   top: 0;
   z-index: 79;
 }
 .title view{
-  width: 80rpx;
+  width: 100rpx;
+  height: 100%;
+  text-align: center;
   display: inline-block;
+}
+.title .active{
+  color: #fff;
+  border-radius: 10%;
 }
 .cardList{
   width: 96%;
-  height: 200rpx;
-  background-color: #B3e5fc;
+  background-color: #fff;
   border-radius: 20rpx;
   padding: 10rpx 10rpx;
   box-sizing: border-box;
