--- a/miniprogram/pages/list/list.wxss
+++ b/miniprogram/pages/list/list.wxss
@@ -13,8 +13,10 @@
   background-color: #ffffff;
 }
 .classify .class_box{
+  padding-top: 20rpx;
   width: 120rpx;
-  height: 100rpx;
+  height: 120rpx;
+  box-sizing: border-box;
   border-radius: 8rpx;
   margin-left: 20rpx;
   float: left;
@@ -22,7 +24,9 @@
   font-size: 28rpx;
   text-align: center;
 }
-
+.classify .class_box .box-name{
+  line-height: 42rpx;
+}
 .class_box image{
   width: 60rpx;
   height: 60rpx;
@@ -34,7 +38,7 @@
 }
 /* 指示点样式 */
 .classify_body .wx-swiper-dots .wx-swiper-dots-horizontal{
-     margin-bottom: 2rpx;
+    margin-bottom: 2rpx;
 }
 .classify_body .wx-swiper-dot{
     width:35rpx;
@@ -118,6 +122,7 @@
   box-sizing: border-box;
 }
 .info-list{
+  margin-top: 20rpx;
   width: 100%;
   height: 250rpx;
   padding: 0 20rpx;
@@ -125,6 +130,7 @@
   background-color: #fff;
   display: flex;
   align-items: center;
+  border-top: 2rpx solid #e2e2e2;
 }
 .info-img{
   width: 200rpx;
