--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -35,9 +35,11 @@ page{
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 84rpx;
-  background-color: #e2e2e2;
+  /* height: 84rpx; */
+  background-color: #fff;
   font-size: 28rpx;
+  border-top: 1px solid #ccc;
+  padding: 20rpx 0;
 }
 .ui-form-item .ui-label{
   padding-left: 20rpx;
@@ -46,6 +48,11 @@ page{
 .ui-form-item .ui-input{
   /* float: left; */
     width: 70%;
+}
+.ui-form-item .ui-textarea{
+  /* float: left; */
+    width: 70%;
+    height: 200rpx;
 }
 .ui-button{
   margin-top: 12rpx;
