--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,36 +1,47 @@
-<!--index.wxml-->
-<view class="container" bindtap='hideLeft'>
-  <scroll-view scroll-x='{{true}}' class='title'>
-    <view wx:for="{{navList}}" wx:key="{{index}}" 
-    class=" {{item.active?'active p_bg_org':''}}">{{ item.name }}</view>
-  </scroll-view>
-  <scroll-view>
-    <!-- 文章列表 -->
-    <view class='cardList public_shadow_qin' wx:for='{{cardList}}' wx:key='{{index}}'>
-      <view class='head-msg'>
-        <view class='head-img'>
-          <image src='/image/computed.png'></image>
+<!--pages/list/list.wxml-->
+<view>
+  <view class="banner public_shadow">
+    <swiper indicator-dots="true" autoplay="true" interval="3000" indicator-active-color="#2089DC" circular="true" bindchange="EventHandle">
+      <block wx:for="{{bannerUrl}}" wx:key="index">
+        <swiper-item>
+          <image src="{{item}}" style="width:100%;"></image>
+        </swiper-item>
+      </block>
+    </swiper>
+  </view>
+  <!-- 分类栏 -->
+  <view class='classify public_shadow'>
+    <swiper indicator-dots="true" class='classify_body' autoplay="" interval="" circular="2000">
+      <swiper-item>
+        <view class='class_box public_shadow' wx:for='{{classList}}' wx:key="index">
+          <image src='{{item.url}}'></image>
+          <text class='box-name'>{{item.name}}</text>
         </view>
-        <view class='head-name'>{{ item.main.userName }}</view>
-        <view class='head-time'>{{ item.creatTime }}</view>
+      </swiper-item>
+      <swiper-item>
+        <view class='class_box public_shadow' wx:for='{{classList}}' wx:key="index">
+          <image src='{{item.url}}'></image>{{item.name}}</view>
+      </swiper-item>
+    </swiper>
+  </view>
+  <view class='information'>
+     <view class='info-list public_shadow' wx:for="{{[5,5,5]}}" wx:key="index">
+      <view class='info-img'><image src='{{bannerUrl[1]}}'></image> </view>
+      <view class='info-right'>
+        <view class='info-title p_color_org'>《快速导航信息列表》</view>
+        <view class='info-body'>欢迎来到我的博客中心，runner博客会一直分享科技新闻。欢迎更多的小伙伴加入我。和我一起探讨</view>
       </view>
-      <view class='article-title p_color_org'>{{item.main.title}}</view>
-      <view class='article-content'>{{item.main.des}}</view>
-    </view>
-  </scroll-view>
-  <view wx:if="{{leftWidth==400}}"  catchtouchmove="myCatchTouch" class='fix'></view>
-  <!-- 侧栏 -->
-  <view class='left-seach' catchtap="sss" catchtouchmove="myCatchTouch">
-    <view style='width:{{leftWidth}}rpx;' class='seach-body'>
-      <view class='left-title'><icon type="search" size="16" color='#fff'></icon> 快速导航</view>
-      <view class='left-list' catchtap='addArticle'><icon type="add" size="16" color='#fff'></icon>添加文章</view>
-      <view class='left-list'>我的文章</view>
-      <view class='left-list'>我的收藏</view>
-      <view class='left-list'>点赞过的</view>
-      <view class='left-list'>猜你喜欢</view>
-      <view class='left-list'>评分</view>
-    </view>
-    <!-- <view class='toch-bar-hide'></view> -->
-    <view wx:if="{{leftWidth==0}}" class='toch-bar' catchtap='showLeftBar'>+</view>    
+     </view>
+  </view>
+  <!-- 遮罩 -->
+  <view wx:if='{{showMotai}}'  style='opacity:{{moveX/100}};' class='fix'></view>
+  <!-- 左侧栏 -->
+  <view wx:if='{{showLeftBar}}' style='margin-left:{{moveX-300}}px;' catchtap='closeLeft' class='leftBar'>
+
+  </view>
+  <!-- 作者介绍 -->
+  <view class='motail' wx:if='{{isShowAphorism}}' style='{{motail_top}}'>
+    <!-- <image src='{{imgUrl_change}}principle.png'></image> -->
+    <view class='close_this' catchtap='colse_aphorism'>x</view>
   </view>
 </view>
